--- a/workerpython/Dockerfile.in
+++ b/workerpython/Dockerfile.in
@@ -1,7 +1,7 @@
 #include "../buildsteps/base.txt"
 
 COMMENT(#,Define an image for CoolProp Python buildslaves)
-FROM coolprop/slavebase:TAG
+FROM coolprop/workerbase:TAG
 
 
 #include "../buildsteps/docker.maintainer.txt"
