--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -12,7 +12,8 @@ COMMENT(#,ALTERNATE: RUN yum install -y cmake28 && ln -s `which cmake28` /usr/lo
 COMMENT(#,ALTERNATE: RUN wget --no-check-certificate "http://www.cmake.org/files/v2.8/cmake-2.8.12.2.tar.gz" && tar -zxvf cmake-2.8.12.2.tar.gz && cd cmake-2.8.12.2 && ./bootstrap && make && make install)
 COMMENT(#,ALTERNATE: RUN yum remove -yt cmake && yum install -y cmake3 && cd /usr/bin && ln -s cmake3 cmake && ln -s ccmake3 ccmake && ln -s cpack3 cpack && ln -s ctest3 ctest)
 COMMENT(#,ALTERNATE: RUN wget --no-check-certificate "https://www.cmake.org/files/v3.10/cmake-3.10.1.tar.gz" && tar -zxvf cmake-3.10.1.tar.gz && cd cmake-3.10.1 && ./bootstrap && gmake && gmake install)
-RUN curl -LO "https://www.cmake.org/files/v3.12/cmake-3.12.0.tar.gz" && tar -zxf cmake-3.12.0.tar.gz && cd cmake-3.12.0 && ./bootstrap && gmake && gmake install
+COMMENT(#,ALTERNATE: RUN curl -LO "https://www.cmake.org/files/v3.12/cmake-3.12.0.tar.gz" && tar -zxf cmake-3.12.0.tar.gz && cd cmake-3.12.0 && ./bootstrap && gmake && gmake install)
+RUN yum remove -yt cmake && yum install -y cmake3 && cd /usr/bin && ln -s cmake3 cmake && ln -s ccmake3 ccmake && ln -s cpack3 cpack && ln -s ctest3 ctest
 
 COMMENT(#,Install virtualenv into one of the python installations for creating other virtual environments)
 RUN \
