--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -13,7 +13,27 @@ COMMENT(#,ALTERNATE: RUN wget --no-check-certificate "http://www.cmake.org/files
 COMMENT(#,ALTERNATE: RUN yum remove -yt cmake && yum install -y cmake3 && cd /usr/bin && ln -s cmake3 cmake && ln -s ccmake3 ccmake && ln -s cpack3 cpack && ln -s ctest3 ctest)
 COMMENT(#,ALTERNATE: RUN wget --no-check-certificate "https://www.cmake.org/files/v3.10/cmake-3.10.1.tar.gz" && tar -zxvf cmake-3.10.1.tar.gz && cd cmake-3.10.1 && ./bootstrap && gmake && gmake install)
 COMMENT(#,ALTERNATE: RUN curl -LO "https://www.cmake.org/files/v3.12/cmake-3.12.0.tar.gz" && tar -zxf cmake-3.12.0.tar.gz && cd cmake-3.12.0 && ./bootstrap && gmake && gmake install)
-RUN yum remove -yt cmake && yum install -y cmake3 && cd /usr/bin && ln -s cmake3 cmake && ln -s ccmake3 ccmake && ln -s cpack3 cpack && ln -s ctest3 ctest
+
+
+RUN yum update -y && \
+  yum install -y epel-release && \
+  yum update -y && \
+  yum clean all
+  
+RUN yum groupinstall -y "Development Tools" && \
+  yum install -y git subversion mercurial && \
+  yum install -y wget curl bzip2 && \
+  yum clean all
+
+RUN yum remove cmake; exit 0
+RUN yum install -y cmake3 && \
+  cd /usr/bin && \
+  ln -s cmake3 cmake && \
+  ln -s ccmake3 ccmake && \
+  ln -s cpack3 cpack && \
+  ln -s ctest3 ctest && \
+  yum clean all
+
 
 COMMENT(#,Install virtualenv into one of the python installations for creating other virtual environments)
 RUN \
