Skip the Python builds, they are not used and it takes ages

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ stages:
   - build::debian
   - build::basesystem
   - build::workerbase
-  - build::workerpython
+  #- build::workerpython
 
 jobs:
   include:
