--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -21,7 +21,7 @@ COMMENT(#,  yum update -y && )
 COMMENT(#,  yum clean all)
 
 RUN yum update -y && \
-  rpm -Uvh https://dl.fedoraproject.org/pub/epel/epel-release-latest-5.noarch.rpm && \
+  rpm -Uvh "https://dl.fedoraproject.org/pub/epel/epel-release-latest-5.noarch.rpm" && \
   yum install -y epel-release && \
   yum update -y && \
   yum clean all
