--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -14,30 +14,32 @@ COMMENT(#,ALTERNATE: RUN yum remove -yt cmake && yum install -y cmake3 && cd /us
 COMMENT(#,ALTERNATE: RUN wget --no-check-certificate "https://www.cmake.org/files/v3.10/cmake-3.10.1.tar.gz" && tar -zxvf cmake-3.10.1.tar.gz && cd cmake-3.10.1 && ./bootstrap && gmake && gmake install)
 COMMENT(#,ALTERNATE: RUN curl -LO "https://www.cmake.org/files/v3.12/cmake-3.12.0.tar.gz" && tar -zxf cmake-3.12.0.tar.gz && cd cmake-3.12.0 && ./bootstrap && gmake && gmake install)
 
+RUN curl -LO "https://www.cmake.org/files/v3.12/cmake-3.12.0.tar.gz" && \
+  tar -zxf cmake-3.12.0.tar.gz && \
+  cd cmake-3.12.0 && ./bootstrap && \
+  gmake && \
+  gmake install && \
+  gmake clean
+
 
 COMMENT(#,RUN yum update -y && )
 COMMENT(#,  yum install -y epel-release && )
 COMMENT(#,  yum update -y && )
 COMMENT(#,  yum clean all)
 
-RUN yum update -y && \
-  rpm -Uvh "https://archives.fedoraproject.org/pub/archive/epel/epel-release-latest-5.noarch.rpm" && \
-  yum update -y && \
-  yum clean all
+COMMENT(#,RUN yum groupinstall -y "Development Tools" && )
+COMMENT(#,  yum install -y git subversion mercurial && )
+COMMENT(#,  yum install -y wget curl bzip2 && )
+COMMENT(#,  yum clean all)
 
-RUN yum groupinstall -y "Development Tools" && \
-  yum install -y git subversion mercurial && \
-  yum install -y wget curl bzip2 && \
-  yum clean all
-
-RUN yum remove cmake; exit 0
-RUN yum install -y cmake3 && \
-  cd /usr/bin && \
-  ln -s cmake3 cmake && \
-  ln -s ccmake3 ccmake && \
-  ln -s cpack3 cpack && \
-  ln -s ctest3 ctest && \
-  yum clean all
+COMMENT(#,RUN yum remove cmake; exit 0)
+COMMENT(#,RUN yum install -y cmake3 && )
+COMMENT(#,  cd /usr/bin && )
+COMMENT(#,  ln -s cmake3 cmake && )
+COMMENT(#,  ln -s ccmake3 ccmake && )
+COMMENT(#,  ln -s cpack3 cpack && )
+COMMENT(#,  ln -s ctest3 ctest && )
+COMMENT(#,  yum clean all)
 
 
 COMMENT(#,Install virtualenv into one of the python installations for creating other virtual environments)
