--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -50,7 +50,8 @@ RUN \
 /opt/python/cp27-cp27m/bin/virtualenv /py34   --python=/opt/python/cp34-cp34m/bin/python && \
 /opt/python/cp27-cp27m/bin/virtualenv /py35   --python=/opt/python/cp35-cp35m/bin/python && \
 /opt/python/cp27-cp27m/bin/virtualenv /py36   --python=/opt/python/cp36-cp36m/bin/python && \
-/opt/python/cp27-cp27m/bin/virtualenv /py37   --python=/opt/python/cp37-cp37m/bin/python
+/opt/python/cp27-cp27m/bin/virtualenv /py37   --python=/opt/python/cp37-cp37m/bin/python && \
+/opt/python/cp28-cp28m/bin/virtualenv /py38   --python=/opt/python/cp38-cp38m/bin/python
 
 COMMENT(#,Install pip packages needed)
 RUN \
@@ -59,4 +60,5 @@ RUN \
 /py34/bin/pip install cython && \
 /py35/bin/pip install cython && \
 /py36/bin/pip install cython && \
-/py37/bin/pip install cython
+/py37/bin/pip install cython && \
+/py38/bin/pip install cython
