--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -7,16 +7,18 @@ FROM quay.io/pypa/manylinux1_x86_64
 #include "../buildsteps/docker.maintainer.txt"
 
 
-COMMENT(#,Install Cmake (either from source (reliable) or from yum (64-bit only and it does not symlink in a cmake executable)))
+COMMENT(#,Install CMake (either from source (reliable) or from yum (64-bit only and it does not symlink in a cmake executable)))
 COMMENT(#,ALTERNATE: RUN yum install -y cmake28 && ln -s `which cmake28` /usr/local/bin/cmake)
 COMMENT(#,ALTERNATE: RUN wget --no-check-certificate "http://www.cmake.org/files/v2.8/cmake-2.8.12.2.tar.gz" && tar -zxvf cmake-2.8.12.2.tar.gz && cd cmake-2.8.12.2 && ./bootstrap && make && make install)
 COMMENT(#,ALTERNATE: RUN yum remove -yt cmake && yum install -y cmake3 && cd /usr/bin && ln -s cmake3 cmake && ln -s ccmake3 ccmake && ln -s cpack3 cpack && ln -s ctest3 ctest)
 COMMENT(#,ALTERNATE: RUN wget --no-check-certificate "https://www.cmake.org/files/v3.10/cmake-3.10.1.tar.gz" && tar -zxvf cmake-3.10.1.tar.gz && cd cmake-3.10.1 && ./bootstrap && gmake && gmake install)
 COMMENT(#,ALTERNATE: RUN curl -LO "https://www.cmake.org/files/v3.12/cmake-3.12.0.tar.gz" && tar -zxf cmake-3.12.0.tar.gz && cd cmake-3.12.0 && ./bootstrap && gmake && gmake install)
 
-RUN curl -LO "https://www.cmake.org/files/v3.12/cmake-3.12.0.tar.gz" && \
-  tar -zxf cmake-3.12.0.tar.gz && \
-  cd cmake-3.12.0 && ./bootstrap && \
+COMMENT(#,Install CMake 3.13.4 - the last version with POSIX 2001 support, 3.14 and newer require POSIX 2008.)
+
+RUN curl -LO "https://www.cmake.org/files/v3.13/cmake-3.13.4.tar.gz" && \
+  tar -zxf cmake-3.13.4.tar.gz && \
+  cd cmake-3.13.4 && ./bootstrap && \
   gmake && \
   gmake install && \
   gmake clean
